<resources>
    <string name="app_name">iSafe</string>
    <string name="app_id">1105614282</string>
    <string name="application_id">57f0cb7369bb687339e2c2a88d9fbca0</string>
    <string name="data_base_file_name">app.db</string>
    <string name="data_base_table_name">kk</string>
    <string name="data_base_table_path">/data/data/com.mystery0.isafe/databases/app.db</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_changeKey">Change Key</string>
    <string name="action_setting">Setting</string>
    <string name="verified_done">Verified</string>
    <string name="verified_null">Unverified</string>
    <string name="true_key">HhHhHhKey</string>
    <string name="wrong_key1">HhHhHhKey</string>
    <string name="wrong_key2">HhHfGfgSSC</string>
    <string name="wrong_key3">HhHhHhVXDey</string>
    <string name="wrong_key4">HhHhHhCEgHUy</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_finish">Finish</string>
    <string name="menu_edit">Edit</string>
    <string name="item_all">All</string>
    <string name="item_computer">Computer</string>
    <string name="item_internet">Internet</string>
    <string name="item_email">Email</string>
    <string name="item_game">Game</string>
    <string name="item_member">Member</string>
    <string name="hint_title">Please Enter Title</string>
    <string name="hint_username">Please Enter Username</string>
    <string name="hint_password">Please Enter Password</string>
    <string name="hint_re_password">Please Repeat Enter Password</string>
    <string name="hint_email">Please Enter E-mail</string>
    <string name="hint_feed_message">Please Enter Message</string>
    <string name="hint_contact">Please Enter Your Contact Information</string>
    <string name="hint_change_password_old">Enter Old Password</string>
    <string name="hint_change_password_new">Enter New Password</string>
    <string name="hint_change_email_old">Enter Old E-mail</string>
    <string name="hint_change_email_new">Enter New E-mail</string>
    <string name="error_title">Title Cannot be blank</string>
    <string name="error_username">Username Cannot be blank</string>
    <string name="error_password">Password Cannot be blank</string>
    <string name="error_contact">Contact Information Cannot be blank</string>
    <string name="error_email">E-mail Cannot be blank</string>
    <string name="error_repeat">Passwords Must Be Same</string>
    <string name="snack_bar_error_add">Please Complement Information!</string>
    <string name="snack_bar_error_change">The Key Unable!</string>
    <string name="snack_bar_error_feedback">Please Complete Information!</string>
    <string name="snack_bar_done_change">Change Key Success!</string>
    <string name="snack_bar_done_set">Set Key Success!</string>
    <string name="snack_bar_done_feedback">Success!</string>
    <string name="snack_bar_copied">Text Copied To Clipboard!</string>
    <string name="snack_bar_choose">Please Install A File Manager!</string>
    <string name="snack_bar_done_backup">Backup Done!</string>
    <string name="snack_bar_failed_backup">Backup Failed!</string>
    <string name="snack_bar_done_restore">Restore Done!</string>
    <string name="snack_bar_failed_restore">Restore Failed!</string>
    <string name="snack_bar_complete_delete">Delete Done!</string>
    <string name="snack_bar_complete_update">Information Update Done!</string>
    <string name="snack_bar_reset">The E-mail to reset password had been send.Please complete the next process in E-mail page.</string>
    <string name="snack_bar_complete_upload">Upload Done!</string>
    <string name="snack_bar_complete_download">Download Done!</string>
    <string name="toast_complete_share">Shared Success!</string>
    <string name="toast_cancel_share">Share Cancel!</string>
    <string name="toast_complete_sign_up">Sign Up Success!</string>
    <string name="toast_cancel_sign_up">Sign Up Cancel!</string>
    <string name="toast_complete_sign_in">Sign In Success!</string>
    <string name="toast_cancel_sign_in">Sign In Cancel!</string>
    <string name="dialog_change_key_title">Change Key</string>
    <string name="dialog_change_key_message">Developer do not recommend that you change this value more often. This value influences the encryption of data. The different values may cause data loss, and may lead to a series of unknown bug. Please caution modification!</string>
    <string name="dialog_change_key_hint">Please Enter New Key</string>
    <string name="dialog_set_key_title">Please Enter Key</string>
    <string name="dialog_set_key_message">Please Keep in mind this value!</string>
    <string name="dialog_set_key_hint">Please Enter Key</string>
    <string name="dialog_feedback_title">Loading …</string>
    <string name="dialog_about_title">iSafe</string>
    <string name="dialog_about_version">Version 1.0.0</string>
    <string name="dialog_about_author">By Mystery0</string>
    <string name="dialog_about_team">MX Team</string>
    <string name="dialog_delete_message">This will erase all application\'s data and settings from your device.This will not erase any data from the cloud.</string>
    <string name="dialog_backup_message">Backup/Restore your database to/from the external storage.You can access files on the external storage using any 3rd party file manager application.Please Keep in mind the key!</string>
    <string name="dialog_title_upload">Uploading…</string>
    <string name="dialog_message_upload">Completed…</string>
    <string name="dialog_title_download">Downloading…</string>
    <string name="dialog_message_download">Completed…</string>
    <string name="dialog_message_forget">Please enter your E-mail to reset your password!</string>
    <string name="dialog_message_cloud">Backup data to cloud.You can restore it anytime.</string>
    <string name="information_share_title">The New Material Design APP</string>
    <string name="information_share_summary">A laconic and useful APP</string>
    <string name="information_share_url">https://www.google.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_choose_file">Please Choose A Folder</string>
    <string name="title_cloud">Please Choose A Item</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_email">Change Email</string>
    <string name="title_activity_profile">Profile</string>
    <string name="text_new">New Friend</string>
    <string name="text_forget">Forget?</string>
    <string name="text_username">Username</string>
    <string name="text_email">E-mail</string>
    <string name="text_key">Key</string>
    <string name="text_cloud">Cloud</string>
    <string name="text_change_password">Change password</string>
    <string name="text_change_email">Change E-mail</string>
    <string name="text_change_avatar">Change Avatar</string>
    <string name="text_logout">Logout</string>
    <string name="text_setting_personal">My Profile</string>
    <string name="text_setting_language">Language</string>
    <string name="text_setting_backup">Backup/Restore</string>
    <string name="text_setting_delete">Erase Data</string>
    <string name="text_setting_share">Share With Friends</string>
    <string name="text_setting_send">Send Feedback</string>
    <string name="text_setting_about">About Us</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete">Delete</string>
</resources>