<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/text_about_margin"
        android:textSize="@dimen/text_size_title"
        android:text="@string/dialog_about_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/text_about_margin"
        android:textSize="@dimen/text_size_message"
        android:text="@string/dialog_about_version"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/text_about_margin"
        android:textSize="@dimen/text_size_message"
        android:text="@string/dialog_about_author"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/text_about_margin"
        android:textSize="@dimen/text_size_message"
        android:text="@string/dialog_about_team"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_message"
        android:text="@string/dialog_about_feedback"
        android:layout_height="wrap_content"/>
</LinearLayout>
