<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_centerInParent="true"
        android:id="@+id/login_password"
        android:layout_margin="@dimen/login_margin">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:theme="@style/MyEditText"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/login_username"
        android:layout_margin="@dimen/login_margin"
        android:imeOptions="actionNext"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_above="@id/login_password"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:theme="@style/MyEditText"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@"
            android:hint="@string/hint_username"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/login_new"
        android:text="@string/text_new"
        android:layout_margin="@dimen/login_margin"
        android:textColor="@color/green"
        android:layout_below="@id/login_password"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/login_forget"
        android:text="@string/text_forget"
        android:layout_margin="@dimen/login_margin"
        android:layout_below="@id/login_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"/>

</RelativeLayout>
