<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mystery0.isafe.Activity.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/sign_username"
        android:layout_margin="@dimen/login_margin"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_username"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@"
            android:theme="@style/MyEditText"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_below="@id/sign_username"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_margin="@dimen/login_margin"
        android:id="@+id/sign_password">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_password"
            android:theme="@style/MyEditText"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_below="@id/sign_password"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_margin="@dimen/login_margin"
        android:id="@+id/sign_re_password">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_re_password"
            android:theme="@style/MyEditText"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        android:layout_below="@id/sign_re_password"
        android:layout_margin="@dimen/login_margin"
        android:id="@+id/sign_email">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditText"
            android:hint="@string/hint_email"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>