<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:id="@+id/layout_profile_username"
                        android:focusable="true"
                        android:background="@drawable/selector_linear"
                        android:layout_margin="@dimen/item_setting_margin"
                        android:layout_height="@dimen/item_layout_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_profile"
                android:src="@drawable/ic_username"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_username"
                android:id="@+id/text_username"
                android:layout_toRightOf="@id/img_profile"
                android:layout_toEndOf="@id/img_profile"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:id="@+id/layout_profile_email"
                        android:focusable="true"
                        android:background="@drawable/selector_linear"
                        android:layout_margin="@dimen/item_setting_margin"
                        android:layout_height="@dimen/item_layout_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_email"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/text_email"
                android:gravity="center_vertical"
                android:text="@string/text_email"
                android:layout_toRightOf="@id/img_email"
                android:layout_toEndOf="@id/img_email"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:id="@+id/layout_profile_key"
            android:focusable="true"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_key"
                android:src="@drawable/ic_key"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/text_key"
                android:layout_centerVertical="true"
                android:text="@string/text_key"
                android:layout_toRightOf="@id/img_key"
                android:layout_toEndOf="@id/img_key"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:id="@+id/layout_profile_cloud"
            android:focusable="true"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="@dimen/text_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_cloud"
                android:src="@drawable/ic_cloud"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_cloud"
                android:layout_toRightOf="@id/img_cloud"
                android:layout_toEndOf="@id/img_cloud"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:id="@+id/layout_profile_change_password"
            android:focusable="true"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="@dimen/text_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_change_password"
                android:src="@drawable/ic_change_password"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/text_change_password"
                android:text="@string/text_change_password"
                android:layout_toRightOf="@id/img_change_password"
                android:layout_toEndOf="@id/img_change_password"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:id="@+id/layout_profile_change_email"
            android:focusable="true"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="@dimen/text_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_change_email"
                android:src="@drawable/ic_change_email"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_change_email"
                android:layout_toRightOf="@id/img_change_email"
                android:layout_toEndOf="@id/img_change_email"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/layout_profile_change_head"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="@dimen/text_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_change_head"
                android:src="@drawable/ic_member"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_change_avatar"
                android:layout_toRightOf="@id/img_change_head"
                android:layout_toEndOf="@id/img_change_head"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/layout_profile_logout"
            android:background="@drawable/selector_linear"
            android:layout_margin="@dimen/item_setting_margin"
            android:layout_height="@dimen/text_height">

            <ImageView
                android:layout_width="@dimen/img_size"
                android:layout_margin="@dimen/img_item_margin"
                android:id="@+id/img_log_out"
                android:src="@drawable/ic_exit"
                android:contentDescription="@string/app_name"
                android:layout_height="@dimen/img_size"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_logout"
                android:layout_toRightOf="@id/img_log_out"
                android:layout_toEndOf="@id/img_log_out"
                android:layout_margin="@dimen/item_setting_margin"
                android:textSize="@dimen/item_text_size"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
